unpackaged/main/default/objects/MSA_Software_Discount_Tier_Price__c/MSA_Software_Discount_Tier_Price__c.object-meta.xml
<CustomObject>
    <label>MSA Software Discount Tier Price</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>MSA Software Discount Tier Price</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSA Software Discount Tier Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>