unpackaged/main/default/objects/MSA_Software_Discount_Tier_Price__c/fields/Cross_Orders__c.field-meta.xml
<CustomField>
    <fullName>Cross_Orders__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Consider Active MW</label>
    <type>Checkbox</type>
</CustomField>