unpackaged/main/default/objects/MSA_Software_Discount_Tier_Price__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount (%)</label>
    <precision>14</precision>
    <scale>10</scale>
    <type>Percent</type>
</CustomField>