unpackaged/main/default/objects/MSA_Software_Discount_Tier_Price__c/fields/Discount_Unit__c.field-meta.xml
<CustomField>
    <fullName>Discount_Unit__c</fullName>
    <label>Discount Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>