unpackaged/main/default/objects/MSA_Software_Discount_Tier_Price__c/fields/MSA_Contract__c.field-meta.xml
<CustomField>
    <fullName>MSA_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSA Contract</label>
    <referenceTo>MSA_Contract__c</referenceTo>
    <relationshipLabel>MSA Software Discount Tier Prices</relationshipLabel>
    <relationshipName>MSA_Software_Discount_Tier_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>