unpackaged/main/default/objects/MSA_Software_Discount_Tier_Price__c/fields/Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier__c</fullName>
    <inlineHelpText>Pricing Tier</inlineHelpText>
    <label>Pricing Tier</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>