unpackaged/main/default/objects/MSA_Software_Discount_Tier_Price__c/fields/Product_Services__c.field-meta.xml
<CustomField>
    <fullName>Product_Services__c</fullName>
    <label>Product Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Services</valueSetName>
    </valueSet>
</CustomField>