unpackaged/main/default/objects/MSA_Software_Discount_Tier_Price__c/fields/SW_Discount_Schedule_Name__c.field-meta.xml
<CustomField>
    <fullName>SW_Discount_Schedule_Name__c</fullName>
    <label>SW Discount Schedule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>