unpackaged/main/default/objects/MSA_Software_Discount_Tier_Price__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Slab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>