unpackaged/main/default/objects/MSA_Software_Discount_Tier_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Adapt</value>
    </filters>
    <label>All</label>
</ListView>